<resources>
    <string name="app_name">GreenCo</string>
    <string name="Iniciar_Sesion">Iniciar Sesión</string>
    <!-- Strings used for fragments for navigation -->

    <string name="productos">Productos Orgánicos</string>
<<<<<<< HEAD
    <string name="experiencias_str">Experiencias</string>
    <string name="bebidas_str">Bebidas</string>
    <string name="ingredientes_str">Ingredientes</string>
    <string name="panaderia_str">Panaderia</string>
    <string name="productos_str">productos</string>
    <string name="congelados_str">Congelados</string>
    <string name="carnes_str">carnes</string>
    <string name="mariscos_str">mariscos</string>
=======

    <string name="ingredientes">Ingredientes</string>
    <string name="mayonesa">mayonesa</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="correo">Correo:</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrate_aqui"><![CDATA[-> REGISTRATE AQUÍ<-]]></string>
    <string name="carrito">Comprar</string>

    <!--activity_menu-->
    <string name="Opcion_back">Mi cuenta</string>
    <string name="Opcion_perfil">PERFIL</string>
    <string name="Opcion_favoritos">Favoritos</string>
    <string name="Opcion_beneficios">Beneficios</string>
    <string name="Opcion_promociones">Promociones</string>
    <string name="Opcion_verificacion">Verificacion de cuenta</string>
    <string name="Opcion_salir">Cerrar sesion</string>
    <string name="Open">Open Navigation Drawer</string>
    <string name="Close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



>>>>>>> ee994c9b4f89b86db3ae1f2b3dc1f928c0b79117
</resources>